# mm

./: .gitignore  LICENSE  README.md  build_web.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml  release.yml
docs/: index.md
docs/architecture/: overview.md
docs/assets/stylesheets/: extra.css
docs/development/: setup.md
docs/tutorials/: getting-started.md  import-and-organize.md  web-ui.md
ios/: .gitignore  README.md  project.yml
ios/MM/App/: ContentView.swift  MMApp.swift
ios/MM/Lib/: Config.swift  MediaGrouper.swift
ios/MM/Models/: Filters.swift  GeoPoint.swift  Media.swift  MediaDetail.swift  MetadataPatch.swift  SmartAlbums.swift  Stats.swift  User.swift
ios/MM/Networking/: APIClient.swift  AlbumRepository.swift  AuthRepository.swift  CatalogRepository.swift  Keychain.swift  LibraryRepository.swift  MediaRepository.swift  StatsRepository.swift
ios/MM/Stores/: AuthStore.swift  MediaQueryStore.swift  SelectionStore.swift
ios/MM/Views/: AlbumPickerSheet.swift  AlbumsView.swift  AuthAsyncImage.swift  FilterSheet.swift  LibraryView.swift  LoginView.swift  MapView.swift  MediaDetailView.swift  MediaInfoSheet.swift  MediaTile.swift  SettingsView.swift  StatsView.swift
scripts/: gen_openapi.py  repair_import_paths.py
site/: index.html  styles.css
src/mm/: __init__.py  config.py  errors.py
src/mm/cli/: __init__.py  _utils.py  config_cmd.py  db.py  dedup.py  geo.py  import_cmd.py  importer.py  info.py  init.py  scan.py  search.py  server.py  tag.py  ui.py
src/mm/core/: dedup.py  embeddings.py  geocoding.py  importer.py  metadata.py  scanner.py  tagger.py  thumbnail.py
src/mm/db/: __init__.py  async_repository.py  backend.py  client.py  dto.py  helpers.py  models.py  sync_client.py  sync_repo.py  vector_store.py
src/mm/extractor/: __init__.py  metadata.py
src/mm/geo/: __init__.py  geocoding.py  updater.py
src/mm/io/: __init__.py  storage.py
src/mm/media/: __init__.py  import_workflow.py  importer.py  scanner.py  search.py  thumbnails.py
src/uom/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_dedup.py  test_hashing.py  test_importer.py  test_io_storage.py  test_library_setup.py  test_media_paths.py  test_metadata.py  test_parallel.py  test_repository.py  test_scanner.py  test_thumbnails.py  test_utils.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+260 files in other folders)
