[project]
name = "litemm"
dynamic = ["version"]
description = "Media Manager & Visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30",
    "click>=8.3.1",
    "fastapi[standard]>=0.115",
    "lunar-python>=1.4.8",
    "numpy>=1.24",
    "peewee>=3.19.0",
    "peewee-aio>=2.2.2",
    "peewee-async>=1.2.1",
    "pillow>=10.0",
    "pillow-heif>=0.18",
    "pydantic>=2",
    "pyyaml>=6.0",
    "rawpy>=0.26.1",
    "rich>=13.9",
]

[project.optional-dependencies]
clip = ["open-clip-torch>=2.24", "torch>=2.0", "pillow>=10.0"]

[project.scripts]
mm = "mm.cli:cli"

[project.urls]
Homepage = "https://hspk.github.io/mm/"
Source = "https://github.com/HSPK/mm"
Issues = "https://github.com/HSPK/mm/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/mm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mm"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "mm/_web_dist"

[tool.hatch.build.targets.sdist.force-include]
"web/dist" = "web/dist"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = ["pre-commit>=4.0", "pytest>=9.0.2"]
docs = ["mkdocs-material>=9.6"]
